--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,19 @@
     }
   ],
   "require-dev": {
+    "phpunit/phpunit": ">=4.8"
   },
   "require": {
     "php": ">=5.5",
     "psr/log": "^1.0"
+
   },
   "autoload": {
     "psr-4": {
       "Rioter\\Logger\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": { "Rioter\\Tests\\": "tests/" }
   }
 }
